feat:增加策略