@@ -1,20 +1,25 @@
 package com.gcbjs.demo.json;
 
 import com.gcbjs.demo.constants.WorkStatusEnum;
+import com.gcbjs.demo.json.param.CreateTicketParam;
+import com.gcbjs.demo.json.param.QueryTicketParam;
+import com.gcbjs.demo.json.vo.TicketVO;
 import com.gcbjs.demo.json.vo.UserInfoVO;
+import com.gcbjs.demo.mappers.TicketInfoMapper;
 import com.gcbjs.demo.mappers.UserInfoMapper;
 import com.gcbjs.demo.mappers.model.TicketInfo;
 import com.gcbjs.demo.mappers.model.UserInfo;
 import com.gcbjs.demo.server.ScheduleAppService;
 import com.gcbjs.demo.server.plana.TicketAppService;
 import com.gcbjs.demo.server.plana.TicketQueue;
+import com.gcbjs.demo.server.plana.WaitLog;
+import com.gcbjs.demo.server.plana.cmd.CreateTicketCmd;
+import com.gcbjs.demo.util.Page;
+import com.gcbjs.demo.util.Result;
 import jakarta.annotation.Resource;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.util.CollectionUtils;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestMethod;
-import org.springframework.web.bind.annotation.RequestParam;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.*;
 
 import java.time.LocalDate;
 import java.util.List;
@@ -30,8 +35,8 @@ import java.util.stream.Collectors;
  **/
 @Slf4j
 @RestController
-@RequestMapping("/api")
-public class DemoController {
+@RequestMapping("/ticketApi")
+public class TicketController {
 
     @Resource
     private UserInfoMapper userInfoMapper;
@@ -39,12 +44,44 @@ public class DemoController {
     private TicketAppService ticketAppService;
     @Resource
     private ScheduleAppService scheduleAppService;
+    @Resource
+    private TicketInfoMapper ticketInfoMapper;
 
 
-    @RequestMapping(path = "/list", method = RequestMethod.GET)
-    public List<String> getList() {
-        return List.of("a", "b", "c");
+    /**
+    * 分页查询工单列表
+     *
+    * @param param
+    * @return com.gcbjs.demo.util.Result<com.gcbjs.demo.util.Page<com.gcbjs.demo.json.vo.TicketVO>>
+    * @date: 2024/1/24 17:20
+    */
+    @RequestMapping(path = "/page", method = RequestMethod.GET)
+    public Result<Page<TicketVO>> page(@RequestBody QueryTicketParam param) {
+        Page<TicketInfo> tickets = ticketAppService.getTickets(param);
+        return Result.success(new Page<>(tickets.getTotalNumber(),
+                tickets.getCurrentIndex(),
+                tickets.getPageSize(),
+                tickets.getItems().stream().map(TicketVO::of).toList()));
     }
+
+
+    /**
+     * 统计不同状态的工单数量
+     * @return
+     */
+    @RequestMapping(path = "/count", method = RequestMethod.GET)
+    public Result<Map<String, Integer>> count() {
+        List<String> list = ticketInfoMapper.findAllGroupByStatus();
+        return Result.success(list.stream()
+                .collect(Collectors.toMap(
+                        // 使用 Function.identity() 作为 key 映射
+                        // 使用 Collectors.counting() 作为 value 映射，表示相同 key 的数量
+                        key -> key,
+                        value -> 1,
+                        Integer::sum
+                )));
+    }
+
 
 
     @RequestMapping(path = "/userList", method = RequestMethod.GET)
@@ -58,8 +95,14 @@ public class DemoController {
      * 手动生成工单
      */
     @RequestMapping(path = "/createTicket", method = RequestMethod.POST)
-    public void createTicket() {
-        ticketAppService.receiveTicket();
+    public void createTicket(@RequestBody CreateTicketParam param) {
+        CreateTicketCmd cmd = CreateTicketCmd.builder()
+                .dealerType(param.getDealerType())
+                .loanAmount(param.getLoanAmount())
+                .urgentLevel(param.getUrgentLevel())
+                .userLevel(param.getUserLevel())
+                .build();
+        ticketAppService.receiveTicket(cmd);
     }
 
 
@@ -72,7 +115,13 @@ public class DemoController {
         if (CollectionUtils.isEmpty(waitingList)) {
             return;
         }
-        TicketQueue.getInstance().putAllTicket(waitingList.stream().map(TicketInfo::getTicketId).toList());
+        TicketQueue.getInstance().putAllTicket(waitingList.stream().map(v ->
+                WaitLog.builder().ticketId(v.getTicketId())
+                        .dealerType(v.getDealerType())
+                        .urgentLevel(v.getUrgentLevel())
+                        .userLevel(v.getUserLevel())
+                        .loanAmount(v.getLoanAmount())
+                        .build()).collect(Collectors.toList()));
     }
 
 
@@ -94,11 +143,12 @@ public class DemoController {
     }
 
     /**
-     * 实时获取每日工单数据
+     * 实时获取工单数据
      * 待分配、处理中、已处理
      */
     @RequestMapping(path = "/getDailyDataInRealTime", method = RequestMethod.GET)
     public Map<String, Integer> getDailyDataInRealTime() {
+
         return null;
     }
 
